# vfx-rs

./: .gitignore  .gitmodules  AGENTS.md  ANALYSIS.md  BUG_HUNT_REPORT.md  Cargo.toml  DIAGRAMS.md  FINDINGS.md  GEM.md  GPU.md  IMPLEMENTATION_PLAN.md  PARITY-CHECK.md  PARITY.md  PARITY_AUDIT.md  PARITY_PY.md  PLAN.md  PLAN0.md  PLAN7.md  Plan3.md  QWN.md  README.md  REFS.md  REPORT.md  TESTING.md  TODO-OCIO.md  TODO.md  TODO8.md  TODO_1.md  ULTRA.md  absent.md  bootstrap.py  cdx.cmd  check.md  check_cdl_style.py  debug_apple_log.py  debug_cdl.py  debug_hash.py  diff.txt  extract_funcs.ps1  extract_header.ps1  (+12 more)
crates/vfx-bench/: Cargo.toml
crates/vfx-bench/benches/: vfx_bench.rs
crates/vfx-bench/src/: lib.rs
crates/vfx-cli/: Cargo.toml
crates/vfx-cli/src/: main.rs
crates/vfx-cli/src/commands/: aces.rs  batch.rs  blur.rs  channels.rs  clamp.rs  color.rs  composite.rs  convert.rs  crop.rs  diff.rs  grade.rs  grep.rs  info.rs  layers.rs  lut.rs  maketx.rs  mod.rs  paste.rs  premult.rs  resize.rs  rotate.rs  sharpen.rs  transform.rs  udim.rs  view.rs  warp.rs
crates/vfx-color/: Cargo.toml
crates/vfx-color/src/: aces.rs  cdl.rs  convert.rs  error.rs  lib.rs  pipeline.rs  processor.rs  sse_math.rs
crates/vfx-color/src/aces2/: cam.rs  chroma.rs  common.rs  gamut.rs  mod.rs  tables.rs  tonescale.rs  transform.rs
crates/vfx-compute/: Cargo.toml
crates/vfx-compute/src/: color.rs  context.rs  convert.rs  image.rs  layer.rs  lib.rs  ops.rs  pipeline.rs  processor.rs
crates/vfx-compute/src/backend/: README.md  cache.rs  cluster.rs  cpu_backend.rs  cuda_backend.rs  detect.rs  executor.rs  gpu_primitives.rs  memory.rs  mod.rs  planner.rs  streaming.rs  tiling.rs  vram.rs  wgpu_backend.rs
crates/vfx-compute/src/shaders/: mod.rs
crates/vfx-compute/tests/: backend_test.rs  layer_test.rs
crates/vfx-core/: Cargo.toml
crates/vfx-core/src/: colorspace.rs  error.rs  format.rs  image.rs  lib.rs  pixel.rs  rect.rs  spec.rs
crates/vfx-exr/: .gitignore  AGENTS.md  Cargo.toml  GUIDE.md  README.md  REPORT_DEEP.md  REPORT_MOD.md  THREED.md
crates/vfx-exr/benches/: pixel_format_conversion.rs  profiling.rs  read.rs  write.rs
crates/vfx-exr/docs/: book.toml
crates/vfx-exr/docs/src/: SUMMARY.md  introduction.md
crates/vfx-exr/examples/: 0a_write_rgba.rs  0b_read_meta.rs  0c_read_rgba.rs  1a_write_rgba_with_metadata.rs  1b_convert_exr_to_png.rs  2_rgba_adjust_exposure.rs  3a_write_dynamic_channels_with_metadata.rs  3b_read_all_channels_with_metadata.rs  4a_write_custom_fixed_channels.rs  4b_read_custom_fixed_channels.rs  5a_write_multiple_layers.rs  5b_extract_exr_layers_as_pngs.rs  5c_write_mip_maps.rs  5d_write_legacy_layers.rs  6_extract_mip_map_pngs.rs  7_crop_alpha_any_image.rs  7_crop_alpha_rgba.rs  7_write_raw_blocks.rs  8_read_raw_blocks.rs
crates/vfx-exr/src/: error.rs  io.rs  lib.rs
crates/vfx-exr/src/block/: chunk.rs  deep.rs  lines.rs  mod.rs
crates/vfx-exr/src/compression/: mod.rs  pxr24.rs  rle.rs  zip.rs
crates/vfx-exr/src/image/: deep.rs  mod.rs  pixel_vec.rs
crates/vfx-exr/src/meta/: attribute.rs  header.rs  mod.rs
crates/vfx-exr/src/view/: app.rs  handler.rs  messages.rs  mod.rs  render3d.rs  state.rs  view3d.rs
crates/vfx-exr/tests/: across_compression.rs  deep_benchmark.rs  deep_read.rs  dev.rs  fuzz.rs  roundtrip.rs
crates/vfx-gpu/: Cargo.toml
crates/vfx-gpu/src/: color.rs  context.rs  image.rs  lib.rs  ops.rs
crates/vfx-gpu/src/backend/: cpu_backend.rs  detect.rs  gpu_primitives.rs  mod.rs  wgpu_backend.rs
crates/vfx-gpu/src/shaders/: mod.rs
crates/vfx-gpu/tests/: backend_test.rs
crates/vfx-icc/: Cargo.toml
crates/vfx-icc/src/: error.rs  lib.rs  profile.rs  standard.rs  transform.rs
crates/vfx-io/: Cargo.toml
crates/vfx-io/src/: arriraw.rs  avif.rs  cache.rs  cinema_dng.rs  colorconfig.rs  dds.rs  deepdata.rs  detect.rs  dpx.rs  error.rs  exr.rs  exr_deep.rs  hdr.rs  heif.rs  jp2.rs  jpeg.rs  ktx.rs  lib.rs  metadata.rs  png.rs  psd.rs  redcode.rs  registry.rs  sequence.rs  texture.rs  tiff.rs  traits.rs  udim.rs  webp.rs
crates/vfx-io/src/attrs/: mod.rs  value.rs
crates/vfx-io/src/imagebuf/: iterators.rs  mod.rs  pixels.rs  storage.rs
crates/vfx-io/src/imagebufalgo/: arithmetic.rs  channels.rs  color.rs  composite.rs  deep.rs  demosaic.rs  drawing.rs  fft.rs  fillholes.rs  filters.rs  geometry.rs  mod.rs  ocio.rs  patterns.rs  stats.rs  (+3 more)
crates/vfx-io/tests/: fixtures_io.rs  new_functions_test.rs  ocio_test.rs  registry_tests.rs  remaining_functions_test.rs  text_test.rs
crates/vfx-lut/: Cargo.toml
crates/vfx-lut/src/: cdl.rs  clf.rs  csp.rs  cube.rs  discreet1dl.rs  error.rs  hdl.rs  interp.rs  iridas_itx.rs  iridas_look.rs  lib.rs  lut1d.rs  lut3d.rs  nuke_vf.rs  pandora.rs  spi.rs  spi_mtx.rs  threedl.rs  truelight.rs
crates/vfx-math/: Cargo.toml
crates/vfx-math/src/: adapt.rs  interp.rs  lib.rs  mat3.rs  simd.rs  vec3.rs
crates/vfx-ocio/: Cargo.toml
crates/vfx-ocio/src/: aces2.rs  baker.rs  builtin.rs  builtin_transforms.rs  cache.rs  colorspace.rs  config.rs  config_builder.rs  context.rs  display.rs  dynamic.rs  error.rs  gpu.rs  grading_hue_curve.rs  lib.rs  look.rs  processor.rs  role.rs  simd.rs  transform.rs  validate.rs
crates/vfx-ocio/tests/: yaml_tags.rs
crates/vfx-ops/: Cargo.toml
crates/vfx-ops/src/: allocation.rs  cdl.rs  composite.rs  error.rs  exponent.rs  exposure_contrast.rs  fft.rs  filter.rs  fixed_function.rs  grading_primary.rs  guard.rs  layer_ops.rs  lib.rs  log_op.rs  parallel.rs  range.rs  resize.rs  transform.rs  warp.rs
crates/vfx-primaries/: Cargo.toml
crates/vfx-primaries/src/: lib.rs
crates/vfx-rs-py/: Cargo.toml  README.md  pyproject.toml
crates/vfx-rs-py/src/: core.rs  deep.rs  drawing.rs  fft.rs  format.rs  image.rs  io.rs  layered.rs  lib.rs  lut.rs  ocio.rs  ocio_advanced.rs  ops.rs  processor.rs  stats.rs  test.py  viewer.rs  warp.rs
crates/vfx-tests/: Cargo.toml  tmpclaude-b497-cwd
crates/vfx-tests/src/: golden.rs  lib.rs
crates/vfx-view/: AGENTS.md  Cargo.toml  plan1.md
crates/vfx-view/src/: app.rs  handler.rs  lib.rs  messages.rs  state.rs
(+265 files in other folders)
