[package]
name = "vfx-color"
description = "Unified color transformation API for VFX pipelines"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
gpu = ["vfx-compute"]

[dependencies]
vfx-core.workspace = true
vfx-math.workspace = true
vfx-transfer.workspace = true
vfx-primaries.workspace = true
vfx-lut.workspace = true
thiserror.workspace = true

# Optional GPU acceleration
vfx-compute = { workspace = true, optional = true }

[dev-dependencies]
approx.workspace = true
