[package]
name = "vfx-compute"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Unified compute backend for VFX workflows (CPU + GPU)"

[features]
default = []
wgpu = ["dep:wgpu", "dep:pollster"]
io = ["dep:vfx-io"]
streaming = ["io"]

[dependencies]
# GPU compute (optional)
wgpu = { version = "24", optional = true }
bytemuck = { version = "1.21", features = ["derive"] }
pollster = { version = "0.4", optional = true }

# Internal
vfx-core = { workspace = true }
vfx-io = { workspace = true, optional = true }

# Parallelism
rayon = { workspace = true }

# System info
sys-info = "0.9"

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
