[package]
name = "vfx-compute"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Unified compute backend for VFX workflows (CPU + GPU)"

[features]
default = ["io"]
wgpu = ["dep:wgpu", "dep:pollster"]
cuda = ["dep:cudarc"]
io = ["dep:vfx-io"]

[dependencies]
# GPU compute (optional)
wgpu = { version = "24", optional = true }
bytemuck = { version = "1.21", features = ["derive"] }
pollster = { version = "0.4", optional = true }

# Internal
vfx-core = { workspace = true }
vfx-io = { workspace = true, optional = true }

# Parallelism
rayon = { workspace = true }

# System info
sys-info = "0.9"

# Error handling
thiserror = { workspace = true }

# VRAM detection (platform-specific)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Dxgi"] }

[target.'cfg(target_os = "linux")'.dependencies]
nvml-wrapper = { version = "0.10", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-metal = { version = "0.3.2", features = ["MTLDevice"] }
objc2-core-graphics = "0.3.2"

# CUDA: Windows/Linux only (not macOS)
[target.'cfg(not(target_os = "macos"))'.dependencies]
cudarc = { version = "0.18", default-features = false, features = ["driver", "nvrtc", "cuda-version-from-build-system", "dynamic-loading"], optional = true }

[dev-dependencies]
tempfile = { workspace = true }
