[package]
name = "vfx-exr"
description = "Read and write OpenEXR files without any unsafe code (fork with deep data support)"
keywords = ["exr", "openexr", "file", "binary", "io", "deep", "vfx"]
categories = ["encoding", "filesystem", "graphics", "multimedia"]

version = "1.74.0"
edition = "2018"
authors = ["johannesvollmer <contact@johannesvollmer.com>", "vfx-rs contributors"]

repository = "https://github.com/vfx-rs/vfx-exr"
readme = "README.md"
license = "BSD-3-Clause"
exclude = [ "specification/*", "specification/**", "tests/images/*", "tests/images/**" ]
rust-version = "1.61.0"

[badges]
maintenance = { status = "actively-developed" }

[lib]
path = "src/lib.rs"

[dependencies]
lebe = "^0.5.2"
half = "2.2.1"
bit_field = "^0.10.3"
miniz_oxide = "^0.8.9"
smallvec = "^1.15.1"
rayon-core = { version = "^1.11.0", optional = true }
zune-inflate = { version = "^0.2.54", default-features = false, features = ["zlib"] }

# View feature dependencies
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"], optional = true }
egui = { version = "0.33", optional = true }
egui_dock = { version = "0.18", optional = true }
rfd = { version = "0.17", optional = true }
three-d = { git = "https://github.com/asny/three-d", default-features = false, optional = true }

[dev-dependencies]
image = { version = "0.24.8", default-features = false, features = ["png"] }
bencher = "0.1.5"
walkdir = "2.5.0"
rand = "0.8.5"
rayon = "1.7.0"

[features]
# Default: core functionality without GUI
default = ["rayon", "gen"]

# rayon is used for parallel compression
rayon = ["dep:rayon-core"]

# Enable test utilities (validate_results module) for integration tests.
test-utils = []

# Test image generator module
gen = []

# EXR viewer with 2D/3D visualization
view = ["dep:eframe", "dep:egui", "dep:rfd"]

# 3D viewer (point cloud, heightfield)
view-3d = ["view", "dep:three-d", "dep:egui_dock"]

[[bin]]
name = "exrs-gen"
path = "src/bin/exrs-gen.rs"
required-features = ["gen"]

[[bin]]
name = "exrs-view"
path = "src/bin/exrs-view.rs"
required-features = ["view"]

[[example]]
name = "7_write_raw_blocks"
required-features = ["rayon"]

[[example]]
name = "8_read_raw_blocks"
required-features = ["rayon"]

[[bench]]
name = "read"
harness = false
required-features = ["rayon"]

[[bench]]
name = "profiling"
harness = false
required-features = ["rayon"]

[[bench]]
name = "write"
harness = false
required-features = ["rayon"]

[[bench]]
name = "pixel_format_conversion"
harness = false
required-features = ["rayon"]

