[package]
name = "vfx-io"
description = "Image I/O for VFX pipelines - EXR, PNG, JPEG, TIFF, DPX support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["exr", "png", "jpeg", "tiff", "dpx", "hdr"]
exr = ["dep:exr"]
png = ["dep:png"]
jpeg = ["dep:jpeg-decoder", "dep:jpeg-encoder"]
tiff = ["dep:tiff"]
dpx = []
hdr = []

# Modern formats (via image crate)
webp = ["dep:image"]
avif = ["dep:image"]

# JPEG2000 (requires OpenJPEG system library)
jp2 = ["dep:jpeg2k"]

# HEIF/HEIC support (requires system libheif >= 1.17)
# 
# Windows (vcpkg):
#   vcpkg install libheif:x64-windows
#   set VCPKG_ROOT=C:\vcpkg
#
# Linux:
#   apt install libheif-dev   # Debian/Ubuntu
#   dnf install libheif-devel # Fedora
#
# macOS:
#   brew install libheif
#
# Or use embedded-libheif to compile from source (slower build):
#   heif = ["dep:libheif-rs", "libheif-rs/embedded-libheif"]
heif = ["dep:libheif-rs"]

[dependencies]
vfx-core.workspace = true
thiserror.workspace = true

# EXR support
exr = { version = "1.74", optional = true }

# PNG support
png = { version = "0.18", optional = true }

# JPEG support
jpeg-decoder = { version = "0.3", optional = true }
jpeg-encoder = { version = "0.6", optional = true }

# TIFF support
tiff = { version = "0.10", optional = true }

# HEIF/HEIC support (see feature comment for setup instructions)
libheif-rs = { version = "2.5", optional = true }

# For DPX (manual implementation)
byteorder = "1.5"

# WebP/AVIF support via image crate
# WebP: webp feature for full encode/decode
# AVIF: avif for encoding only (ravif) - decoding requires system dav1d library
image = { version = "0.25", optional = true, default-features = false, features = ["webp", "avif"] }

# JPEG2000 support (requires OpenJPEG)
jpeg2k = { version = "0.8", optional = true }

[dev-dependencies]
approx.workspace = true
tempfile = "3.24"
