[package]
name = "vfx-io"
description = "Image I/O for VFX pipelines - EXR, PNG, JPEG, TIFF, DPX support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["exr", "png", "jpeg", "tiff", "dpx", "hdr"]

# Text rendering
text = ["dep:cosmic-text"]
exr = ["dep:exr"]
png = ["dep:png"]
jpeg = ["dep:jpeg-decoder", "dep:jpeg-encoder"]
tiff = ["dep:tiff"]
dpx = []
hdr = []

# Parallel processing
rayon = ["dep:rayon"]

# Modern formats (via image crate)
webp = ["dep:image"]
avif = ["dep:image"]

# JPEG2000 (requires OpenJPEG system library)
jp2 = ["dep:jpeg2k"]

# HEIF/HEIC support (requires system libheif >= 1.17)
# 
# Windows (vcpkg):
#   vcpkg install libheif:x64-windows
#   set VCPKG_ROOT=C:\vcpkg
#
# Linux:
#   apt install libheif-dev   # Debian/Ubuntu
#   dnf install libheif-devel # Fedora
#
# macOS:
#   brew install libheif
#
# Or use embedded-libheif to compile from source (slower build):
#   heif = ["dep:libheif-rs", "libheif-rs/embedded-libheif"]
heif = ["dep:libheif-rs"]

[dependencies]
vfx-core.workspace = true
vfx-ocio.workspace = true
thiserror.workspace = true
tracing = "0.1"
half = "2.4"

# EXR support
exr = { version = "1.74", optional = true }

# PNG support
png = { version = "0.18", optional = true }

# JPEG support
jpeg-decoder = { version = "0.3", optional = true }
jpeg-encoder = { version = "0.6", optional = true }

# TIFF support
tiff = { version = "0.10", optional = true }

# HEIF/HEIC support (see feature comment for setup instructions)
libheif-rs = { version = "2.5", optional = true }

# For DPX (manual implementation)
byteorder = "1.5"

# For deep EXR channel lists
smallvec = "1.15"

# WebP/AVIF support via image crate
# WebP: full encode/decode
# AVIF: write-only (ravif encoder). For AVIF read support:
#   1. Install dav1d system library
#   2. Enable "avif-native" feature in image crate
#
# Known issue: dav1d via vcpkg on Windows is not detected by pkg-config.
# Workarounds:
#   - Set DAV1D_DIR environment variable to vcpkg installation path
#   - Use MSYS2: pacman -S mingw-w64-x86_64-dav1d
#   - Build dav1d from source with meson and set PKG_CONFIG_PATH
# See: https://code.videolan.org/videolan/dav1d
image = { version = "0.25", optional = true, default-features = false, features = ["webp", "avif"] }

# JPEG2000 support (requires OpenJPEG)
jpeg2k = { version = "0.8", optional = true }

# Parallel iteration
rayon = { version = "1.10", optional = true }

# FFT support
rustfft = "6.2"
num-complex = "0.4"

# Text rendering (optional)
cosmic-text = { version = "0.14", optional = true }
lazy_static = "1.5"

[dev-dependencies]
approx.workspace = true
tempfile = "3.24"
