[package]
name = "vfx-lut"
description = "LUT types and parsing for VFX color pipelines"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
vfx-core = { workspace = true }
thiserror = { workspace = true }
quick-xml = { workspace = true }
