[package]
name = "vfx-ops"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Image processing operations for VFX pipelines"
keywords = ["vfx", "image", "processing", "composite", "filter"]
categories = ["graphics", "multimedia::images"]

[features]
default = ["parallel"]
parallel = ["rayon"]
fft = ["rustfft"]

[dependencies]
vfx-core.workspace = true
vfx-io.workspace = true
vfx-math.workspace = true
vfx-compute.workspace = true
thiserror.workspace = true
rayon = { workspace = true, optional = true }
rustfft = { workspace = true, optional = true }

[dev-dependencies]
