[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "vfx_rs"
version = "0.1.0"
description = "High-performance VFX image processing library"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
keywords = ["vfx", "exr", "openexr", "image", "color", "lut", "compositing"]
dependencies = ["numpy>=1.20"]

[project.urls]
Homepage = "https://github.com/vfx-rs/vfx-rs"
Repository = "https://github.com/vfx-rs/vfx-rs"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "vfx_rs"
